--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
+  "homepage": "https://Pranam2002.github.io/task6",
   "name": "task6",
   "version": "0.1.0",
-  "homepage": "https://Pranam2002.github.io/task6",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -25,12 +25,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
